[tool.poetry]
name = "nlp-service"
version = "2.0.0b1"
description = "Microservice for NLP tasks using gRPC"
authors = ["Mirko Lenz <info@mirko-lenz.de>"]
license = "MIT"
readme = "README.md"
homepage = "http://recap.uni-trier.de"
repository = "https://github.com/recap-utr/nlp-service"
packages = [{ include = "nlp_service" }]

[tool.poetry.scripts]
nlp-service = "nlp_service.cli:app"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.24"
scipy = "^1.10"
spacy = "^3.7"
nltk = "^3.8"
nptyping = "^2.5"
mashumaro = "^3.11"
typer = "^0.9"
rich = "^13.7"
openai = "^1.3"
python-Levenshtein = "^0.23"
betterproto = { version = "^2.0.0b6", allow-prereleases = true }
gensim = { version = "^4.3", optional = true }
sentence-transformers = { version = "^2.2", optional = true }
torch = { version = "^2.1.1", optional = true }
transformers = { version = "^4.34", optional = true }

[tool.poetry.extras]
gensim = ["gensim"]
transformers = ["transformers", "sentence-transformers", "torch"]
all = ["gensim", "transformers", "sentence-transformers", "torch"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
