[project]
name = "nlp-service"
version = "2.0.3"
description = "Microservice for NLP tasks using gRPC"
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "arg-services>=1.7.7,<2",
    "cbrkit[nlp]>=0.21.1,<1",
    "typer>=0.9,<1",
]

[project.optional-dependencies]
all = [
    "cbrkit[llm,transformers]",
    "tensorflow-hub>=0.16,<1; (sys_platform == 'darwin' and platform_machine == 'arm64') or sys_platform == 'linux'",
    "tensorflow>=2,<3; (sys_platform == 'darwin' and platform_machine == 'arm64') or sys_platform == 'linux'",
]

[project.scripts]
nlp-service = "nlp_service.server:main"

[project.urls]
Repository = "https://github.com/recap-utr/nlp-service"
Documentation = "https://recap-utr.github.io/nlp-service/"
Issues = "https://github.com/recap-utr/nlp-service/issues"
Changelog = "https://github.com/recap-utr/nlp-service/releases"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
